--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,9 @@ form {
   background-color: rgb(112, 121, 255);
   border-color: rgb(102, 112, 255);
 }
+
+.sun-icon {
+  margin-top: -5px;
+  width: 40%;
+  height: 40%;
+}
