--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ form {
   padding: 20px;
   padding-bottom: 10px;
   width: 600px;
-  margin: 30px auto;
+  margin: 40px auto 10px;
 }
 
 .about {
@@ -104,4 +104,38 @@ form {
   font-size: 13px;
   opacity: 50%;
   margin-left: 258px;
+}
+
+.weeksIcon {
+  width: 58px;
+  display: block;
+  margin: 0 auto;
+}
+
+.cards {
+  padding: 10px;
+  transition: all 200ms ease-in-out;
+}
+.cards:hover {
+  background-color: rgb(249, 252, 255);
+  border-radius: 5px;
+}
+
+.forecast {
+  text-align: center;
+  color: #000000;
+}
+
+.day-of-week {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.temp-forecast {
+  font-size: 13px;
+}
+
+.forecast-temp-min {
+  margin-left: 5px;
+  opacity: 0.5;
 }
